# fused-muon

./: .gitignore  MANIFEST.in  README.md  README_CN.md  pyproject.toml  setup.py
benchmarks/: bench_ns_step.py  plot_results.py  reference_muon.py  train_cifar10.py
csrc/: ns_gemm.cu  ns_gemm.h  syrk_128.cu  syrk_64.cu  syrk_common.cuh  syrk_splitk.cuh  torch_binding.cu
docs/: optimization_report.md
muon_fused/: __init__.py  ns_step.py  optimizer.py
tests/: test_benchmark.py  test_correctness.py  test_optimizer.py
