[build-system]
requires = ["setuptools>=61.0", "torch>=2.0", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "fused-muon"
version = "0.1.0"
description = "Fused CUDA Muon optimizer with optimized Newton-Schulz iteration"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = ["torch>=2.0"]

[project.urls]
Homepage = "https://github.com/StarrickLiu/fused-muon"
